tests/e2e/invalid_return_type.error
Error: syntax error in story at line 1, column 22

1|    function foo returns list
                           ^

E0046: An indented block is required to be before here
